Removed unnecessary apache commons libraries